// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`2. renders with a child 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
  <Text>
    Hello world!
  </Text>
</View>
`;
